# mutica-py

./: .gitignore  .unv  Cargo.toml  pyproject.toml  setup.py
mutica_py/: __init__.py  __init__.pyi
src/: lib.rs
tests/: test_mutica.py
